--- a/public/style.css
+++ b/public/style.css
@@ -11,13 +11,16 @@
   width: 70%;
 }
 
+.image-preview {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .image-preview img {
   height: 250px;
   width: 250px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   /* border: 3px solid red; */
 }
 
@@ -26,6 +29,8 @@ input {
   width: 250px;
   margin: 10px;
   padding-left: 5px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
 }
 
 .form_top {
