--- a/public/style.css
+++ b/public/style.css
@@ -8,9 +8,10 @@
 
 .form {
   height: 70vh;
-  width: 70%;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  border: 1px solid blue;
 }
 
 .image-preview {
@@ -24,6 +25,10 @@
   width: 250px;
   border-radius: 50%;
   /* border: 3px solid red; */
+}
+
+.image_select {
+  border: 1px solid black;
 }
 
 input {
@@ -40,7 +45,7 @@ input {
 }
 
 .form_top {
-  /* border: 1px solid red; */
+  border: 3px solid yellowgreen;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,27 +53,25 @@ input {
 }
 
 .form_bottom {
-  /* border: 1px solid blue; */
+  border: 3px solid orange;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.personal_info {
+.personal_info_links {
   display: flex;
   flex-direction: column;
-}
-
-.social_media_links {
-  display: flex;
-  flex-direction: column;
+  border: 3px solid green;
+  width: 60%;
 }
 
 .form_submit {
-  /* width: 20%; */
+  width: 100%;
   /* height: 5%; */
-  /* border: 1px solid red; */
+  border: 1px solid red;
   border-radius: 5px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
 }
