--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,14 @@
 .form_wrapper {
-  border: 2px solid green;
+  /* border: 2px solid green; */
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.default_profile img {
+  height: 200px;
+  width: 200px;
 }
 
 .form {
@@ -11,7 +16,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 .image-preview {
@@ -21,19 +26,21 @@
 }
 
 .image-preview img {
-  height: 250px;
-  width: 250px;
+  height: 200px;
+  width: 200px;
   border-radius: 50%;
   /* border: 3px solid red; */
 }
 
 .image_select {
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  padding-left: 20%;
+  /* width: 30%; */
 }
 
 input {
   height: 25px;
-  width: 250px;
+  width: 200px;
   margin: 10px;
   padding-left: 5px;
   border-radius: 5px;
@@ -45,15 +52,16 @@ input {
 }
 
 .form_top {
-  border: 3px solid yellowgreen;
+  /* border: 3px solid yellowgreen; */
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 25px;
+  height: 75%;
 }
 
 .form_bottom {
-  border: 3px solid orange;
+  /* border: 3px solid orange; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,15 +69,16 @@ input {
 
 .personal_info_links {
   display: flex;
-  flex-direction: column;
-  border: 3px solid green;
-  width: 60%;
+  flex-direction: row;
+  padding-right: 10%;
+  /* border: 3px solid green; */
+  width: 40%;
 }
 
 .form_submit {
-  width: 100%;
-  /* height: 5%; */
-  border: 1px solid red;
+  width: 95%;
+  height: 100%;
+  /* border: 1px solid red; */
   border-radius: 5px;
   display: flex;
   justify-content: space-around;
